# knowmyhealthplatform

./: LICENSE  README.md
backend/: .env.example  .gitignore  Laboratory.csv  Radiology.csv  out.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00a52e85cb66_add_patient_note_to_consultation.py  03898872bcd3_add_blog_table.py  1d599f69c9f0_add_symptom_assessments_table.py  1d8c8352e50f_add_partner_module.py  2b1884fc639e_added_health_package_bookings_and_.py  2dc084289579_updated_partner_table.py  33649f06241e_create_user_table.py  3e5a869de109_create_lab_tests_and_lab_test_.py  497f4a0e8d7e_linked_partners_to_users_and_patients_.py  4eab254f936f_updated_lab_test_time_columns_and_added_.py  62c5522076da_added_all_tables.py  6be67e0b11ff_added_offline_clinic_bookings.py  6ec1087f985f_added_prescription_url_to_consultations.py  75e65954c33d_initial_migration.py  8d9d1e0d30a8_added_consultation_table_and_patient_.py  924548d783b0_add_availability.py  9cf2d910fd25_add_image_url_in_prescriptions_table.py  9fdf9f21a0d5_restore_partner_columns.py  a1b2c3d4e5f6_add_patient_note_to_consultations.py  a1c48d869b6c_add_partners_table.py  a894e9c0b854_added_health_packages.py  bec33929e551_added_user_fk_to_payment.py  c334b44ca773_added_razorpay_payment_integration.py  c52890204686_add_prescription_recommendations_table.py  c78345c9704c_add_coupon_table.py  (+8 more)
backend/app/: main.py
backend/docs/: deployment.md
backend/scripts/: create_bucket.py  drop_types.py  get_jwt.py
backend/seed/: seed_lab_tests.py
backend/tests/: conftest.py
(+169 files in other folders)
