[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "slowapi>=0.1.9",
    "uvicorn>=0.42.0",
    "supabase>=2.28.3",
    "pydantic-ai>=1.77.0",
    "pillow>=12.2.0",
    "google-genai>=1.70.0",
    "pexels-api>=1.0.1",
    "resend>=2.27.0",
    "agora-token-builder>=1.0.0",
]
